welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:10: error: type mismatch;
 found   : Int
 required: Boolean
	if(biscuits){
           ^RunHalf:15: error: not found: value cndition
		cndition = 1;
                ^